[package]
name = "rustpass-dpi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
io-uring = "0.7.0"
libc = "0.2.162"
log = "0.4.22"
slab = "0.4.9"
socket2 = "0.5.7"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["time"] }
tokio-uring = "0.5.0"

[build-dependencies]
cc = "1.2.4"
